z-index for slider button was too high, corrected

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -514,6 +514,6 @@ polyline {
   left: var(--position);
   transform: translate(-50%, -50%);
   pointer-events: none;
-  z-index: 20;
+  z-index: 12;
 
 }
